Changing Default interpolation also changes curve of new drivers #70281

Closed
opened 2019-09-26 19:26:12 +02:00 by pranavjit virdi · 3 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-26 14:56, hash: a933237d68
Worked: (optional)

Short description of error
I have my default interpolation set to constant in preferences (under animation --> f-curves), adding a new driver anywhere the curve of the driver gets set to constant aswell, upon further testing it appears that changing it to all other interpolations does the same, only exception being bezier interpolation.
Bug6.PNG
i don't know if this is intentional, but weird and unexpected for sure, for all drivers the curve should always be linear.

Exact steps for others to reproduce the error

  1. open preferences, Animaton tab, Under f-curves, change the default interpolation type to constant (or anything other than Bezier and linear)
  2. with the already selected cube, go to any property and add a driver by right click --> add driver,
  3. in the popup window click show in driver editor button at the very bottom.
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-26 14:56, hash: `a933237d68` Worked: (optional) **Short description of error** I have my default interpolation set to constant in preferences (under animation --> f-curves), adding a new driver anywhere the curve of the driver gets set to constant aswell, upon further testing it appears that changing it to all other interpolations does the same, only exception being bezier interpolation. ![Bug6.PNG](https://archive.blender.org/developer/F7776029/Bug6.PNG) i don't know if this is intentional, but weird and unexpected for sure, for all drivers the curve should always be linear. **Exact steps for others to reproduce the error** 1. open preferences, Animaton tab, Under f-curves, change the default interpolation type to constant (or anything other than Bezier and linear) 2. with the already selected cube, go to any property and add a driver by right click --> add driver, 3. in the popup window click show in driver editor button at the very bottom.

Added subscriber: @PranavjitVirdi

Added subscriber: @PranavjitVirdi
Sybren A. Stüvel self-assigned this 2019-09-27 12:58:42 +02:00

This issue was referenced by 3370af2dc1

This issue was referenced by 3370af2dc1ced49099a4a7e6e15f3ffd009d91ca

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70281
No description provided.